--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,3 +2,27 @@
 @plugin "daisyui" {
   themes: light --default, abyss --prefersdark;
 }
+
+h1 {
+  @apply text-4xl font-bold;
+}
+
+h2 {
+  @apply text-3xl font-semibold;
+}
+
+h3 {
+  @apply text-2xl font-medium;
+}
+
+h4 {
+  @apply text-xl font-medium;
+}
+
+h5 {
+  @apply text-lg font-medium;
+}
+
+h6 {
+  @apply text-base font-medium;
+}
