Change light theme

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: light --default, abyss --prefersdark;
+  themes: winter --default, abyss --prefersdark;
 }
 
 h1 {
