--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,11 +4,11 @@
 }
 
 h1 {
-  @apply text-4xl font-bold;
+  @apply text-4xl font-bold text-center lg:text-left;
 }
 
 h2 {
-  @apply text-3xl font-semibold;
+  @apply text-3xl font-semibold text-center lg:text-left;
 }
 
 h3 {
@@ -25,4 +25,8 @@ h5 {
 
 h6 {
   @apply text-base font-medium;
+}
+
+.container {
+  @apply max-w-screen-xl mx-auto px-6 my-4 text-left;
 }
